adding mobile responsive

--- a/femalesurgical.html
+++ b/femalesurgical.html
@@ -136,10 +136,10 @@
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3">HYMENOPLASTY</h3>
-            <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
                 <img src="assets/img/9.png" class="img-fluid"  alt="">
             </div>
-            <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="col-lg-6 col-md-12 col-sm-12  pb-2">
                 <span>
                     Hymenoplasty: Restoring Trust and Intimacy <br> 
                     Hymenoplasty, offered at Aruna Hospital couples clinics, is a surgical procedure to reconstruct the hymen, the thin membrane near the vaginal opening. <br>
@@ -162,7 +162,7 @@
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3" >LABIOMINORAPLASTY</h3>
-            <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
                 <span>       
                     Labiominoraplasty: increased comfort and confidence <br>
                     Labiomajorplasty, offered at Aruna Hospital couples clinics, is a surgical procedure to change the shape or reduce the size of the labia majora, the outer lips of the vagina. <br>
@@ -173,7 +173,7 @@
                     your body.Contact Couples Clinics at Aruna Hospital to learn more about labiaplasty and its potential benefits for you.
                 </span>
             </div>
-            <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
                 <img src="assets/img/10.png" class="img-fluid" alt="">
             </div>
         </div>
@@ -188,10 +188,10 @@
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3">LABIOMAJORAPLASTY </h3>
-            <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
                 <img src="assets/img/surgicalimage3.png" class="img-fluid" alt="">
             </div>
-            <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
                 <span>
                     Labiomajorplasty: increased comfort and confidence 
                     Labiomajorplasty is a surgery offered at Aruna Hospital's couples clinics that aims to change the shape or size of the labia majora, the outer labia of the vagina. <br>
@@ -213,7 +213,7 @@
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3"> CLITORAL HOOD REDUCTION  </h3>
-            <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
                 <span>
                     Clitoral hood reduction: Improved comfort and aesthetics 
                     Clitoral hood reduction, available at Aruna Hospital Couples Clinics, is a surgical procedure to reduce excess skin or tissue covering the clitoral area. <br> 
@@ -224,7 +224,7 @@
                     Rediscover comfort and confidence with clitoral hood reduction.For more information about this procedure, contact Couples Clinic at Aruna Hospital.
                 </span>
             </div>
-            <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
                 <img src="assets/img/surgicalimage4.png" class="img-fluid" alt="">
             </div>
         </div>
@@ -239,10 +239,10 @@
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3">CLITORAL UNHOODING </h3>
-            <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
                 <img src="assets/img/surgicalimage5.png" class="img-fluid"  alt="">
             </div>
-            <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
              <span>
                 Clitoral Exposure: Improved Sensation and Comfort 
                 Clitoral exposure, offered at Aruna Hospital Couples Clinics, is a surgical procedure that exposes the glans of the clitoris by removing excess tissue from the clitoral hood. <br>
@@ -266,7 +266,7 @@
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3"> MONSPLATY  </h3>
-            <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
                 <span>
                     Monsplasty: Improving Aesthetics and Comfort 
                     Monsplasty, available at Aruna Hospital Couples Clinics, is a surgical procedure aimed at changing the shape and reducing the size of the pubic mound, the area above the pubic bone. <br>
@@ -277,7 +277,7 @@
                     Rediscover comfort and confidence with Monsplasty.For more information about this procedure, contact Couples Clinic at Aruna Hospital.  
                 </span>
             </div>
-            <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
                 <img src="assets/img/surgicalimage6.png" class="img-fluid" alt="">
             </div>
         </div>
