--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 
 
 <!-- Header Large Screen only  -->
+
 <header id="main_img"> 
 <nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow fixed-top"  >
   <a class="navbar-brand ms-5" href="index.html">
@@ -156,23 +157,38 @@
       <a class="nav-item nav-link" href="#" id="navlink1">
         <div class="d-flex align-items-center">
           <img src="assets/img/phone.svg" alt="">
-          <h5 class="ml-2">+79979901881</h5>
+          <h5 class="ml-2 text-dark">+79979901881</h5>
         </div>
       </a>
-      <a class="nav-item nav-link mt-2" href="index.html" id="navlink2">
+      <a class="nav-item nav-link mt-2" href="index.html" id="navlink2" style="margin-top: -4%;">
         <h5>Home</h5>
       </a>
       <a class="nav-item nav-link mt-2 text-dark" href="about.html" id="navlink3">
         <h5>About</h5>
       </a>
-      <a class="nav-item nav-link mt-2" href="#ourservices" id="navlink4">
+      <a class="nav-item nav-link mt-2 text-dark" href="#ourservices" id="navlink4">
         <h5>Services</h5>
       </a>
-      <a class="nav-item nav-link mt-2" href="gallery.html" id="navlink5">
+      <a class="nav-item nav-link mt-2 text-dark" href="gallery.html" id="navlink5">
         <h5>Gallery</h5>
       </a>
-      <a class="nav-item nav-link mt-2" href="contact.html" id="navlink6">
+      <a class="nav-item nav-link mt-2 text-dark" href="contact.html" id="navlink6">
         <h5>Contact</h5>
+      </a>
+      <a class="nav-item nav-link mt-2 text-dark" href="#" id="navlink6">
+        <!-- <h5>Contact</h5> -->
+        <a href="https://www.facebook.com/profile.php?id=61552215897331" target="_blank">
+          <img src="assets/img/facebook.png" alt="Facebook">
+      </a>
+      <a href="https://www.youtube.com/channel/UCxqTQfOzRZLO7gNJQSgTGIw" target="_blank">
+        <img src="assets/img/icons8-youtube-48.png" alt="">
+      </a>
+      <a href="https://www.facebook.com/profile.php?id=61552215897331" target="_blank">
+        <img src="assets/img/icons8-instagram-48.png" alt="">
+      </a>
+      <a href="https://www.facebook.com/profile.php?id=61552215897331" target="_blank">
+        <img src="assets/img/gmail.png" alt="">
+      </a>
       </a>
       <a class="nav-item nav-link mt-2 pt-4" href="appoinment.html" id="navlink7">
         <button type="button" class="btn btn-primary" id="button">APPOINTMENT</button>
@@ -187,38 +203,31 @@
   <!-- Ending  Header -->
 
 
-  <div class="fulfilingloveiconbar" style="margin-top: 13%;"  style="background-color: transparent;">
+  <div class="fulfilingloveiconbar d-none d-md-block" style="margin-top: 13%; background-color: transparent;">
     <div class="side-btn" id="side-btn-click">
-      <a href="https://www.facebook.com/profile.php?id=61552215897331" target="_blank">
-        <img src="assets/img/facebook.png" alt="Facebook">
-      </a>
+        <a href="https://www.facebook.com/profile.php?id=61552215897331" target="_blank">
+            <img src="assets/img/facebook.png" alt="Facebook">
+        </a>
     </div>
     <div class="side-btn-div">
-      <!-- <div class="col-lg-3 mt-3">
-        <img src="assets/img/facebook.png" alt="">
-      </div> -->
-      <div class="col-lg-3 mt-3">
-        <a href="https://www.youtube.com/channel/UCxqTQfOzRZLO7gNJQSgTGIw" target="_blank">
-           <img src="assets/img/icons8-youtube-48.png" alt="">
-        </a>
-      </div>
-      <div class="col-lg-3  mt-3">
-         <a href="https://www.facebook.com/profile.php?id=61552215897331" target="_blank">
-           <img src="assets/img/icons8-instagram-48.png" alt="">
-         </a>
-      </div>
-      <!-- <div class="col-lg-3  mt-3">
-         <a href="https://www.facebook.com/profile.php?id=61552215897331" target="_blank">
-            <img src="assets/img/pinterest.png" alt="">
-         </a>
-      </div> -->
-      <div class="col-lg-3  mt-3">
-        <a href="https://www.facebook.com/profile.php?id=61552215897331" target="_blank">
-           <img src="assets/img/gmail.png" alt="">
-        </a>
-      </div>
+        <div class="col-lg-3 mt-3">
+            <a href="https://www.youtube.com/channel/UCxqTQfOzRZLO7gNJQSgTGIw" target="_blank">
+                <img src="assets/img/icons8-youtube-48.png" alt="">
+            </a>
+        </div>
+        <div class="col-lg-3 mt-3">
+            <a href="https://www.facebook.com/profile.php?id=61552215897331" target="_blank">
+                <img src="assets/img/icons8-instagram-48.png" alt="">
+            </a>
+        </div>
+        <div class="col-lg-3 mt-3">
+            <a href="https://www.facebook.com/profile.php?id=61552215897331" target="_blank">
+                <img src="assets/img/gmail.png" alt="">
+            </a>
+        </div>
     </div>
-  </div>
+</div>
+
 
   <!-- FULFILING LOVE -->
  <section  > 
@@ -259,7 +268,7 @@
   <!-- FULFILING  LOVE NAVBAR PART -->
 
   <section>
-    <div class="container" id="fulfilinglovenavbarpart" >
+    <div class="container " id="fulfilinglovenavbarpart" >
       <div class="row container  justify-content-center pt-3 d-none d-md-block d-lg-flex">
         <div class="col-lg-6 row">
           <div class="col-1"></div>
