--- a/male.html
+++ b/male.html
@@ -138,10 +138,10 @@
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-5">Erectile Dysfunction </h3> 
-            <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
                 <img src="assets/img/maleserviceimg1.png" class="img-fluid" alt="">
             </div>
-            <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
                <span>
                     Erectile Dysfunction: Regaining Confidence and Intimacy
                     Erectile Dysfunction (ED) is a condition where a man experiences difficulty achieving or maintaining an erection sufficient for sexual activity. At Aruna Hospital Couple Clinics, we provide comprehensive solutions to help you regain confidence and intimacy.<br>
@@ -165,7 +165,7 @@
     <div class="container mb-5">
         <div class="row"> 
               <h3 class="pb-5">Urine Incontinence </h3>
-            <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
                <span>
                     Urinary Incontinence: Regain Control and Confidence
                     Urinary Incontinence is a common condition where individuals experience unintentional leakage of urine. At Aruna Hospital Couple Clinics, we offer effective solutions to help you regain control and confidence in your daily life.<br>
@@ -176,7 +176,7 @@
                     Don't let urinary incontinence hold you back. Contact Aruna Hospital Couple Clinics to explore your options and start your journey toward a more comfortable and confident life
                </span>
             </div>
-            <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
                 <!-- <img src="assets/img/maleserviceimg2.png" class="img-fluid" alt=""> -->
                 <img src="assets/img/Urine 564406.png" class="img-fluid" alt="">
 
@@ -193,10 +193,10 @@
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-5">Premature Ejaculation  </h3>
-            <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
                 <img src="assets/img/maleserviceimg3.png" class="img-fluid" alt="">
             </div>
-            <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
                <span>
                     Premature Ejaculation: Overcoming for a Satisfying Intimate Life
                     Premature Ejaculation (PE) is a common condition where a man reaches orgasm and ejaculates sooner than desired during sexual activity. At Aruna Hospital Couple Clinics, we offer effective solutions to help you overcome this challenge and enjoy a more satisfying intimate life.<br>
