--- a/ExectileDysfunctionProcedure.html
+++ b/ExectileDysfunctionProcedure.html
@@ -139,7 +139,7 @@
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-5">Focused Extracorporeal Shock wave Therapy  </h3>
-            <div class="col-lg-6 col-sm-12 col-md-12">
+            <div class="col-lg-6 col-sm-12 col-md-12 pb-2">
              <span>
                 Focused Extracorporeal Shock Wave Therapy (ESWT): Revitalizing Wellness 
                 Targeted Extracorporeal Shock Wave Therapy, available at Aruna Hospital Couples Clinics, is a non-invasive medical procedure that uses shock waves to stimulate healing and improve blood circulation in specific areas of the body become bodies. .<br>
@@ -151,7 +151,7 @@
                 If you are looking for a non-invasive and effective solution to your condition, contact Aruna Hospital Couples Clinic to learn more about how targeted extracorporeal shockwave therapy can help you revive your well-being.
              </span>
             </div>
-            <div class="col-lg-6 col-sm-12 col-md-12 mt-5">
+            <div class="col-lg-6 col-sm-12 col-md-12 mt-5 pb-2">
                 <!-- <img src="assets/img/Erectile_Dysfunction4.png" class="img-fluid" alt=""> -->
                 <img src="assets/img/forced 554546.png" class="img-fluid" alt="">
 
@@ -166,10 +166,10 @@
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-5">HIFEM Chair</h3>
-            <div class="col-lg-6 col-sm-12 col-md-12">
+            <div class="col-lg-6 col-sm-12 col-md-12 pb-2">
                 <img src="assets/img/Erectile_Dysfunction5.png" class="img-fluid" alt="">
             </div>
-            <div class="col-lg-6 col-sm-12 col-md-12">
+            <div class="col-lg-6 col-sm-12 col-md-12 pb-2">
                <span>
                     HIFEM Chair (Emsella Chair) at Aruna Hospital Couple Clinics: Elevating Pelvic Health
                     At Aruna Hospital Couple Clinics, we offer the cutting-edge HIFEM Chair, also known as the Emsella Chair. This remarkable device employs High-Intensity Focused Electromagnetic (HIFEM) technology to strengthen pelvic floor muscles.<br>
@@ -191,7 +191,7 @@
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-5"> P-Shot  </h3>
-            <div class="col-lg-6 col-sm-12 col-md-12">
+            <div class="col-lg-6 col-sm-12 col-md-12 pb-2">
                <span>
                     P-Shot (Priapus Shot): Enhancing Male Sexual Wellness
                     The P-Shot, also known as the Priapus Shot, is a non-surgical medical procedure offered at Aruna Hospital Couple Clinics. It involves the injection of platelet-rich plasma (PRP) into the penis to enhance sexual function and overall wellness in men.<br>
@@ -207,7 +207,7 @@
                     The P-Shot is a non-invasive and discreet option to enhance male sexual wellness. Contact Aruna Hospital Couple Clinics to learn more about this procedure and how it can benefit you.
                </span>
             </div>
-            <div class="col-lg-6 col-sm-12 col-md-12 ">
+            <div class="col-lg-6 col-sm-12 col-md-12 pb-2">
                 <!-- <img src="assets/img/Erectile_Dysfunction6.png" class="img-fluid" alt=""> -->
                 <img src="assets/img/P-shot 605546.png" class="img-fluid" alt="">
 
