changes in navbar

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <!-- Header Large Screen only  -->
 
 <header id="main_img"> 
-<nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow fixed-top"  >
+<nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow fixed-top">
   <a class="navbar-brand ms-5" href="index.html">
     <img src="assets/img/logo.png" alt="">
   </a>
@@ -221,10 +221,11 @@
             </a>
         </div>
         <div class="col-lg-3 mt-3">
-            <a href="https://www.facebook.com/profile.php?id=61552215897331" target="_blank">
-                <img src="assets/img/gmail.png" alt="">
-            </a>
-        </div>
+          <a href="mailto:arunahospital.999@gmail.com" target="_blank" rel="noopener noreferrer">
+              <img src="assets/img/gmail.png" alt="">
+          </a>
+      </div>
+     
     </div>
 </div>
 
@@ -785,7 +786,7 @@
    <!-- ENDING  FOOTER -->
 
   <!-- WhatsApp link -->
-  <a href="https://api.whatsapp.com/send?phone=918341350693" class="whatsapp-link shadow" target="_blank">
+  <a href="https://api.whatsapp.com/send?phone=9179979901881" class="whatsapp-link shadow" target="_blank">
     <i class="bi bi-whatsapp"></i>
   </a>
   
