--- a/ExectileDysfunctionProcedure.html
+++ b/ExectileDysfunctionProcedure.html
@@ -34,49 +34,49 @@
 <!-- Header Large Screen only  -->
 
 <nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow fixed-top">
-  <a class="navbar-brand" href="index.html">
+  <a class="navbar-brand ms-2" href="index.html">
     <img src="assets/img/logo.png" alt="">
   </a>
+  <span class="slant-shadow">.</span>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav ml-auto justify-content-between">
-      <a class="nav-item nav-link ms-5 ps-5 pe-5" href="male.html" id="navlink2">
+      <a class="nav-item nav-link   ps-5 pe-5" href="male.html" id="navlink2">
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <img src="assets/img/menscilinicfinallogo.png" alt="">
-
       </a>
+     <span class="slant-shadow">.</span>
       <a class="nav-item nav-link mt-3 pt-3" href="#" id="navlink2">
         <div class="d-flex align-items-center">
           <img src="assets/img/phone.svg" alt="">
           <h5 class="ml-2">+79979901881</h5>
         </div>
       </a>
-      <a class="nav-item nav-link mt-2" href="appoinment.html" id="navlink2">
+      <a class="nav-item nav-link  mt-2" href="appoinment.html" id="navlink2" >
         <div class="dropdown show">
-            <a class="btn btn-primary dropdown-toggle" href="#" role="button" id="dropdownMenuLink button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background-color: #036DA4;">
-                SERVICES
-            </a>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                <a class="dropdown-item" href="femalenonsurgical.html">FemalenonSurgical</a>
-                <a class="dropdown-item" href="femalesurgical.html">Female Surgical</a>
-                <a class="dropdown-item" href="male.html">Male</a>
-                <a class="dropdown-item" href="ExectileDysfunctionProcedure.html">ExectileDysfunctionProcedure</a>
-            </div>
+          <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background-color: #036DA4;">
+             SERVICES
+          </a>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <a class="dropdown-item" href="femalenonsurgical.html">FemalenonSurgical</a>
+            <a class="dropdown-item" href="femalesurgical.html">Female Surgical</a>
+            <a class="dropdown-item" href="male.html">Male</a>
+            <a class="dropdown-item" href="ExectileDysfunctionProcedure.html">ExectileDysfunctionProcedure</a>
+          </div>
         </div>
-    </a>
-    
+      </a>
       <a class="nav-item nav-link" href="appoinment.html" id="navlink2" >
-        <button type="button" class="btn btn-primary ms-3 ps-3 pe-3 mt-3"  id="button">APPOINTMENT</button>
+        <button type="button" class="btn btn-primary    mt-3"  id="button">APPOINTMENT</button>
       </a>
     </div>
   </div>
 </nav>
   <!-- Header -->
-
- 
-<!-- Header Small and medium Screen only  -->
+  
+   
+  <!-- Header Small and medium Screen only  -->
 
 
 <nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none shadow fixed-top">
@@ -93,14 +93,14 @@
         <img src="assets/img/menscilinicfinallogo.png" alt="">
 
       </a>
-      <a class="nav-item nav-link" href="#" id="navlink2" style="margin-top: -5%;">
+      <a class="nav-item nav-link" href="#" id="navlink2">
         <div class="d-flex align-items-center">
           <img src="assets/img/phone.svg" alt="">
           <h5 class="ml-2">+79979901881</h5>
         </div>
       </a> 
-      <a class="nav-item nav-link" href="appoinment.html" id="navlink2"  style="margin-top: -5%;">
-        <div class="dropdown show" style="margin-top: -13%;">
+      <a class="nav-item nav-li" href="#" id="navlink2">
+        <div class="dropdown show ms-4">
           <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background-color: #036DA4;">
              SERVICES
           </a>
@@ -112,14 +112,14 @@
           </div>
         </div>
       </a>         
-      <a class="nav-item nav-link" href="appoinment.html" id="navlink2" style="margin-top: -5%;">
+      <a class="nav-item nav-link" href="appoinment.html" id="navlink2">
         <button type="button" class="btn btn-primary" style="background-color: #036DA4;" >APPOINTMENT</button>
       </a>
     </div>
   </div>
 </nav>
-
-  <!-- Header -->
+  
+    <!-- Header -->
 
 <!--  MAIN SECTION -->
 
