--- a/appoinment.html
+++ b/appoinment.html
@@ -30,13 +30,14 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-
 <!-- Header Large Screen only  -->
 
-<nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow fixed-top">
+<header id="main_img"> 
+  <nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow fixed-top p-0">
     <a class="navbar-brand ms-5" href="index.html">
       <img src="assets/img/logo.png" alt="">
     </a>
+    <span class="slant-shadow">.</span>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -45,21 +46,24 @@
         <a class="nav-item nav-link ms-5 ps-5 pe-5" href="male.html" id="navlink2">
           <!-- <img src="assets/img/logo.png" alt=""> -->
           <img src="assets/img/menscilinicfinallogo.png" alt="">
-  
         </a>
+        <span class="slant-shadow">.</span>
         <a class="nav-item nav-link ms-5 mt-3 pt-3  ps-5  " href="#" id="navlink2">
           <div class="d-flex align-items-center">
             <img src="assets/img/phone.svg" alt="">
             <h5 class="ml-2">+79979901881</h5>
           </div>
         </a>
+        <!-- <span class="slant-shadow">.</span> -->
         <a class="nav-item nav-link ms-2 " href="appoinment.html" id="navlink2" >
           <button type="button" class="btn btn-primary ms-3 ps-3 pe-3 mt-3"  id="button">APPOINTMENT</button>
         </a>
       </div>
     </div>
   </nav>
-    <!-- Header -->
+  </header>
+  
+  <!-- Header -->
   
    
   <!-- Header Small and medium Screen only  -->
