--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
           <h5 class="ml-2">+79979901881</h5>
         </div>
       </a>
+      <!-- <span class="slant-shadow">.</span> -->
       <a class="nav-item nav-link ms-2 " href="appoinment.html" id="navlink2" >
         <button type="button" class="btn btn-primary ms-3 ps-3 pe-3 mt-3"  id="button">APPOINTMENT</button>
       </a>
