--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
           </div>
         </a>
         <!-- <span class="slant-shadow">.</span> -->
-        <a class="nav-item nav-link ms-2 " href="appoinment.html" id="navlink2" >
+        <a class="nav-item nav-link ms-2 " href="appointment.html" id="navlink2" >
           <button type="button" class="btn btn-primary ms-3 ps-3 pe-3 mt-3"  id="button">APPOINTMENT</button>
         </a>
       </div>
@@ -90,7 +90,7 @@
           <h5 class="ml-2">+79979901881</h5>
         </div>
       </a>
-      <a class="nav-item nav-link mt-2" href="appoinment.html" id="navlink2" style="margin-top: -5%;">
+      <a class="nav-item nav-link mt-2" href="appointment.html" id="navlink2" style="margin-top: -5%;">
         <button type="button" class="btn btn-primary "  id="button">APPOINTMENT</button>
       </a>
     </div>
@@ -130,7 +130,7 @@
                       Hospital in Kakinada - Aruna Hospital Couples Clinic. Arrange a consultation with our experts today and take the first step towards more self-confidence.
                       </p>
                       <div class="aboutbtn text-center"> 
-                         <a href="appoinment.html" class="btn btn-primary" id="button">APPOINTMENT</a>
+                         <a href="appointment.html" class="btn btn-primary" id="button">APPOINTMENT</a>
                       </div> 
                   </div>
                 </div>
