--- a/command.html
+++ b/command.html
@@ -45,7 +45,7 @@ navbar home the main page navbar -->
             <h5 class="ml-2">+79979901881</h5>
           </div>
         </a>
-        <a class="nav-item nav-link ms-2 " href="appoinment.html" id="navlink2" >
+        <a class="nav-item nav-link ms-2 " href="appointment.html" id="navlink2" >
           <button type="button" class="btn btn-primary ms-3 ps-3 pe-3 mt-3"  id="button">APPOINTMENT</button>
         </a>
       </div>
