--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <h5 class="ml-2">+79979901881</h5>
           </div>
         </a>
-        <a class="nav-item nav-link ms-2 " href="appoinment.html" id="navlink2">
+        <a class="nav-item nav-link ms-2 " href="appointment.html" id="navlink2">
           <button type="button" class="btn btn-primary ms-3 ps-3 pe-3 mt-3" id="button">APPOINTMENT</button>
         </a>
       </div>
@@ -93,7 +93,7 @@
       <a class="nav-item nav-link mt-2" href="contact.html" id="navlink6">
         <h5>Contact</h5>
       </a>
-      <a class="nav-item nav-link mt-2 pt-4" href="appoinment.html" id="navlink7">
+      <a class="nav-item nav-link mt-2 pt-4" href="appointment.html" id="navlink7">
         <button type="button" class="btn btn-primary" id="button">APPOINTMENT</button>
       </a>
     </div>
@@ -130,7 +130,7 @@
         </div>
       </a>
       <!-- <span class="slant-shadow">.</span> -->
-      <a class="nav-item nav-link ms-2 " href="appoinment.html" id="navlink2" >
+      <a class="nav-item nav-link ms-2 " href="appointment.html" id="navlink2" >
         <button type="button" class="btn btn-primary ms-3 ps-3 pe-3 mt-3"  id="button">APPOINTMENT</button>
       </a>
     </div>
@@ -194,7 +194,7 @@
         <img src="assets/img/gmail.png" alt="">
       </a>
       </a>
-      <a class="nav-item nav-link mt-2 pt-4" href="appoinment.html" id="navlink7">
+      <a class="nav-item nav-link mt-2 pt-4" href="appointment.html" id="navlink7">
         <button type="button" class="btn btn-primary" id="button">APPOINTMENT</button>
       </a>
     </div>
@@ -252,7 +252,7 @@
                     Couple-centric Solutions"</h6>
                   <br>
                   <a href="about.html"><button type="button" class="btn btn-outline-primary">Learn more</button></a>
-                  <!-- <a href="appoinment.html" class="btn btn-outline-primary" id="button"> Learn more </a> -->
+                  <!-- <a href="appointment.html" class="btn btn-outline-primary" id="button"> Learn more </a> -->
                 </div>
                 <div class="col-lg-6 col-sm-6 col-md-12">
                   <!-- <img src="assets/img/image1.png" alt="" height="auto" class="img-fluid" width="auto"> -->
@@ -333,7 +333,7 @@
           <br>
           <br>
           <!-- <button type="button" class="btn btn-primary">APPOINTMENT</button> -->
-          <a href="appoinment.html" class="btn btn-primary" id="button">APPOINTMENT</a>
+          <a href="appointment.html" class="btn btn-primary" id="button">APPOINTMENT</a>
         </div>
       </div>
     </div>
