--- a/appointment.html
+++ b/appointment.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Appoinment</title>
+    <title>appointment</title>
       <!-- Adding Style Sheet -->
 
       <link rel="stylesheet" href="assets/style.css">
@@ -55,7 +55,7 @@
           </div>
         </a>
         <!-- <span class="slant-shadow">.</span> -->
-        <a class="nav-item nav-link ms-2 " href="appoinment.html" id="navlink2" >
+        <a class="nav-item nav-link ms-2 " href="appointment.html" id="navlink2" >
           <button type="button" class="btn btn-primary ms-3 ps-3 pe-3 mt-3"  id="button">APPOINTMENT</button>
         </a>
       </div>
@@ -88,7 +88,7 @@
             <h5 class="ml-2">+79979901881</h5>
           </div>
         </a>
-        <a class="nav-item nav-link mt-2" href="appoinment.html" id="navlink2" style="margin-top: -5%;">
+        <a class="nav-item nav-link mt-2" href="appointment.html" id="navlink2" style="margin-top: -5%;">
           <button type="button" class="btn btn-primary "  id="button">APPOINTMENT</button>
         </a>
       </div>
@@ -105,32 +105,32 @@
         <div class="container mainsection">
             <div class="row"> 
                 <div class="col-lg-6  col-sm-12 col-md-12  mt-5 pt-5 mainsectionimage">
-                     <!-- <img src="assets/img/appoinment.png" alt="" height="auto" width="auto"> -->
+                     <!-- <img src="assets/img/appointment.png" alt="" height="auto" width="auto"> -->
                      <img src="assets/img/appointment 546  392 (1).png" class="img-fluid mt-3" alt="">
                 </div>
                 <div class="col-lg-6 col-sm-12 col-md-12">
-                    <h1 class="mt-4 ms-5 pt-2">Make An Appoinment</h1>
+                    <h1 class="mt-4 ms-5 pt-2">Make An appointment</h1>
                     <br>
-                    <form id="appoinmentfrom" action="appointmentmail.php" method="post" >
+                    <form id="appointmentfrom" action="appointmentmail.php" method="post" >
                         <input type="text" placeholder="Your Name" class="p-3"  name="name" required>
                         <input type="text" placeholder="Your Email" class="p-3" name="email"  required>
-                        <select id="appoinmentfromselect" name="gender"  class="ps-2"     required>
+                        <select id="appointmentfromselect" name="gender"  class="ps-2"     required>
                             <option value="" disabled selected>Select Option</option>
                             <option value="male">Male</option>
                             <option value="female">Female</option>
                             <option value="other">Other</option>
                         </select>
                         <br>
-                        <input type="date" placeholder="Appoinment Date"   name="date"  class="p-3" required>
+                        <input type="date" placeholder="appointment Date"   name="date"  class="p-3" required>
                         <br>
                         <div class="writeyourmessage"> 
                         <input type="text"  placeholder="write Your Message" name="message"
                          style="height: 100px;" class="p-3"
                         required>    
                         </div>
-                        <!-- <input type="submit" id="appoinmentsubmitbtn"  class="btn btn-primary"value="SUBMIT FORM"> -->
+                        <!-- <input type="submit" id="appointmentsubmitbtn"  class="btn btn-primary"value="SUBMIT FORM"> -->
                         <!-- <button type="button" class="btn btn-primary btn-lg btn-block">SUBMIT FORM</button> -->
-                        <input type="submit" class="btn btn-primary text-light" id="appoinmentsubmitbtn" style="background-color: #003655" value="SUBMIT FORM" >
+                        <input type="submit" class="btn btn-primary text-light" id="appointmentsubmitbtn" style="background-color: #003655" value="SUBMIT FORM" >
 
                     </form>
                 </div>
