--- a/femalenonsurgical.html
+++ b/femalenonsurgical.html
@@ -54,7 +54,7 @@
           <h5 class="ml-2">+79979901881</h5>
         </div>
       </a>
-      <a class="nav-item nav-link  mt-2" href="appoinment.html" id="navlink2" >
+      <a class="nav-item nav-link  mt-2" href="appointment.html" id="navlink2" >
         <div class="dropdown show">
           <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background-color: #036DA4;">
              SERVICES
@@ -67,7 +67,7 @@
           </div>
         </div>
       </a>
-      <a class="nav-item nav-link" href="appoinment.html" id="navlink2" >
+      <a class="nav-item nav-link" href="appointment.html" id="navlink2" >
         <button type="button" class="btn btn-primary    mt-3"  id="button">APPOINTMENT</button>
       </a>
     </div>
@@ -112,7 +112,7 @@
           </div>
         </div>
       </a>         
-      <a class="nav-item nav-link" href="appoinment.html" id="navlink2">
+      <a class="nav-item nav-link" href="appointment.html" id="navlink2">
         <button type="button" class="btn btn-primary" style="background-color: #036DA4;" >APPOINTMENT</button>
       </a>
     </div>
