--- a/gallery.html
+++ b/gallery.html
@@ -53,7 +53,7 @@
           </div>
         </a>
         <!-- <span class="slant-shadow">.</span> -->
-        <a class="nav-item nav-link ms-2 " href="appoinment.html" id="navlink2" >
+        <a class="nav-item nav-link ms-2 " href="appointment.html" id="navlink2" >
           <button type="button" class="btn btn-primary ms-3 ps-3 pe-3 mt-3"  id="button">APPOINTMENT</button>
         </a>
       </div>
@@ -85,7 +85,7 @@
           <h5 class="ml-2">+79979901881</h5>
         </div>
       </a>          
-      <a class="nav-item nav-link" href="appoinment.html" id="navlink2">
+      <a class="nav-item nav-link" href="appointment.html" id="navlink2">
         <button type="button" class="btn btn-primary" id="submit">APPOINTMENT</button>
       </a>
     </div>
