remove some services and resize the image

--- a/gallery.html
+++ b/gallery.html
@@ -27,11 +27,11 @@
 
 
 </head>
-<body>
+<body id="main_img">
 <!-- Header Large Screen only  -->
 
-<header id="main_img"> 
-  <nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow fixed-top p-0">
+<header> 
+  <nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow  p-0">
     <a class="navbar-brand ms-5" href="index.html">
       <img src="assets/img/logo.png" alt="">
     </a>
@@ -53,7 +53,7 @@
           </div>
         </a>
         <!-- <span class="slant-shadow">.</span> -->
-        <a class="nav-item nav-link ms-2 " href="appoinment.html" id="navlink2" >
+        <a class="nav-item nav-link ms-2 " href="appointment.html" id="navlink2" >
           <button type="button" class="btn btn-primary ms-3 ps-3 pe-3 mt-3"  id="button">APPOINTMENT</button>
         </a>
       </div>
@@ -65,7 +65,7 @@
 
  
 <!-- Header Small and medium Screen only  -->
-<nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none shadow fixed-top">
+<nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none shadow fixed-top" >
   <a class="navbar-brand" href="index.html">
     <img src="assets/img/logo.png" alt="">
   </a>
@@ -85,7 +85,7 @@
           <h5 class="ml-2">+79979901881</h5>
         </div>
       </a>          
-      <a class="nav-item nav-link" href="appoinment.html" id="navlink2">
+      <a class="nav-item nav-link" href="appointment.html" id="navlink2">
         <button type="button" class="btn btn-primary" id="submit">APPOINTMENT</button>
       </a>
     </div>
