--- a/appointment.html
+++ b/appointment.html
@@ -1,4 +1,4 @@
-*<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -29,11 +29,11 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
-<body>
+<body id="main_img">
 <!-- Header Large Screen only  -->
 
-<header id="main_img"> 
-  <nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow fixed-top p-0">
+<header > 
+  <nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow  p-0">
     <a class="navbar-brand ms-5" href="index.html">
       <img src="assets/img/logo.png" alt="">
     </a>
@@ -55,7 +55,7 @@
           </div>
         </a>
         <!-- <span class="slant-shadow">.</span> -->
-        <a class="nav-item nav-link ms-2 " href="appoinment.html" id="navlink2" >
+        <a class="nav-item nav-link ms-2 " href="appointment.html" id="navlink2" >
           <button type="button" class="btn btn-primary ms-3 ps-3 pe-3 mt-3"  id="button">APPOINTMENT</button>
         </a>
       </div>
@@ -88,7 +88,7 @@
             <h5 class="ml-2">+79979901881</h5>
           </div>
         </a>
-        <a class="nav-item nav-link mt-2" href="appoinment.html" id="navlink2" style="margin-top: -5%;">
+        <a class="nav-item nav-link mt-2" href="appointment.html" id="navlink2" style="margin-top: -5%;">
           <button type="button" class="btn btn-primary "  id="button">APPOINTMENT</button>
         </a>
       </div>
