--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 </head>
 
-<body>
+<body id="main_img">
 
   <!-- HEADER   -->
 
@@ -52,7 +52,7 @@
             <h5 class="ml-2">+79979901881</h5>
           </div>
         </a>
-        <a class="nav-item nav-link ms-2 " href="appoinment.html" id="navlink2">
+        <a class="nav-item nav-link ms-2 " href="appointment.html" id="navlink2">
           <button type="button" class="btn btn-primary ms-3 ps-3 pe-3 mt-3" id="button">APPOINTMENT</button>
         </a>
       </div>
@@ -93,7 +93,7 @@
       <a class="nav-item nav-link mt-2" href="contact.html" id="navlink6">
         <h5>Contact</h5>
       </a>
-      <a class="nav-item nav-link mt-2 pt-4" href="appoinment.html" id="navlink7">
+      <a class="nav-item nav-link mt-2 pt-4" href="appointment.html" id="navlink7">
         <button type="button" class="btn btn-primary" id="button">APPOINTMENT</button>
       </a>
     </div>
@@ -108,7 +108,7 @@
 <!-- Header Large Screen only  -->
 
 <header id="main_img"> 
-<nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow fixed-top p-0">
+<nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow  p-0">
   <a class="navbar-brand ms-5" href="index.html">
     <img src="assets/img/logo.png" alt="">
   </a>
@@ -130,7 +130,7 @@
         </div>
       </a>
       <!-- <span class="slant-shadow">.</span> -->
-      <a class="nav-item nav-link ms-2 " href="appoinment.html" id="navlink2" >
+      <a class="nav-item nav-link ms-2 " href="appointment.html" id="navlink2" >
         <button type="button" class="btn btn-primary ms-3 ps-3 pe-3 mt-3"  id="button">APPOINTMENT</button>
       </a>
     </div>
@@ -143,7 +143,7 @@
  
 <!-- Header Small and medium Screen only  -->
 
-<nav class="navbar  navbar-light d-block d-md-block d-lg-none shadow fixed-top">
+<nav class="navbar  navbar-light d-block d-md-block d-lg-none shadow"  >
   <a class="navbar-brand me-5" href="index.html">
     <img src="assets/img/logo.png" alt="">
   </a>
@@ -194,7 +194,7 @@
         <img src="assets/img/gmail.png" alt="">
       </a>
       </a>
-      <a class="nav-item nav-link mt-2 pt-4" href="appoinment.html" id="navlink7">
+      <a class="nav-item nav-link mt-2 pt-4" href="appointment.html" id="navlink7">
         <button type="button" class="btn btn-primary" id="button">APPOINTMENT</button>
       </a>
     </div>
@@ -252,7 +252,7 @@
                     Couple-centric Solutions"</h6>
                   <br>
                   <a href="about.html"><button type="button" class="btn btn-outline-primary">Learn more</button></a>
-                  <!-- <a href="appoinment.html" class="btn btn-outline-primary" id="button"> Learn more </a> -->
+                  <!-- <a href="appointment.html" class="btn btn-outline-primary" id="button"> Learn more </a> -->
                 </div>
                 <div class="col-lg-6 col-sm-6 col-md-12">
                   <!-- <img src="assets/img/image1.png" alt="" height="auto" class="img-fluid" width="auto"> -->
@@ -333,7 +333,7 @@
           <br>
           <br>
           <!-- <button type="button" class="btn btn-primary">APPOINTMENT</button> -->
-          <a href="appoinment.html" class="btn btn-primary" id="button">APPOINTMENT</a>
+          <a href="appointment.html" class="btn btn-primary" id="button">APPOINTMENT</a>
         </div>
       </div>
     </div>
@@ -552,24 +552,24 @@
                         <li><a href="femalenonsurgical.html#laser-hair-reduction">Laser Hair Reduction</a></li>
                         <li> <a href="femalenonsurgical.html#bikini-laser-hair-removal"> Bikini Laser Hair Removal </a></li>
                         <li><a href="femalenonsurgical.html#vulva-hair-reduction">Vulva Hair Reduction </a></li>
-                        <li><a href="femalenonsurgical.html#senatine-peels"> Senatine Peels </a> </li>
+                        <!-- <li><a href="femalenonsurgical.html#senatine-peels"> Senatine Peels </a> </li> -->
                         <li><a href="femalenonsurgical.html#strech-mark-management">Strech Mark Management </a></li>
                     </div>
                     <div class="col-lg-6"> 
                         <li><a href="femalenonsurgical.html#breast-sagging">Breast Sagging </a></li>
                         <li><a href="femalenonsurgical.html#facial-rejuvenation">Facial </a>Rejuvenation</li>
-                        <li> <a href="femalenonsurgical.html#melasma">Melasma </a></li>
+                        <!-- <li> <a href="femalenonsurgical.html#melasma">Melasma </a></li> -->
                         <li><a href="femalenonsurgical.html#hair-loss-treatments">Hair Loss Treatments </a></li>
                         <li><a href="femalenonsurgical.html#prp">PRP </a></li>
                         <li><a href="femalenonsurgical.html#mommy-make-over">Mommy Make Over </a></li>
                         <li><a href="femalenonsurgical.html#under-arm-peels">Underarm Peels </a></li>
-                        <li><a href="femalenonsurgical.html#body-peels">Body Peels </a> </li>
+                        <!-- <li><a href="femalenonsurgical.html#body-peels">Body Peels </a> </li> -->
                         <li><a href="femalenonsurgical.html#hollywood-facial">Hollywood Facial</a> </li>
                         <li><a href="femalenonsurgical.html#medi-facial">Medi Facial </a> </li>
                         <li><a href="femalenonsurgical.html#hand-and-feet-rejuvenation">Hand and Feet Rejuvenation </a> </li>
                         <li><a href="femalenonsurgical.html#tattoo-removal">Tattoo Removal </a></li>
                         <li><a href="femalenonsurgical.html#menopause">Menopause </a> </li>
-                        <li><a href="femalenonsurgical.html#ankle-scar-management">Ankle  Scar Management</a> </li>
+                        <li><a href="femalenonsurgical.html#ankle-scar-management">Scar Management</a> </li>
                   </div>
                   </div>
                   </div>
@@ -666,7 +666,7 @@
             <div id="additionalContent1" style="display: none;">
               <!-- Additional content for the first accordion -->
               <h1 class="text-center mb-3">Female Non Surgical</h1>
-              <img src="assets/img/vaginalimg1.png" alt="" class="img-fluid mb-4">
+              <img src="assets/img/services 1.png" alt="" class="img-fluid mb-4">
               <h6>At Aruna Hospital Couple Clinics, we understand that every woman is unique, and so are her beauty goals. Step into a world where we celebrate your individuality and offer a range of non-surgical treatments tailored to enhance your natural radiance.</h6>
               <!-- ... Your content ... -->
               <div class="nomore text-center mt-3"> 
@@ -677,7 +677,7 @@
             <div id="additionalContent2" style="display: none;">
               <!-- Additional content for the second accordion -->
               <h1 class="text-center mb-3">Female Surgical</h1>
-              <img src="assets/img/vaginalimg2.png" alt="" class="img-fluid mb-4">
+              <img src="assets/img/services2.png" alt="" class="img-fluid mb-4">
               <h6>At Aruna Hospital Couple Clinics, we understand the importance of surgical excellence in achieving transformative and lasting results. Step into a realm where our skilled surgeons combine artistry with precision to enhance your beauty through surgical treatments tailored to your unique desires.</h6>
               <!-- ... Your content ... -->
               <div class="nomore text-center mt-3"> 
@@ -688,7 +688,7 @@
             <div id="additionalContent3" style="display: none;">
               <!-- Additional content for the third accordion -->
               <h1 class="text-center mb-3">Male</h1>
-              <img src="assets/img/vaginalimg3.png" alt="" class="img-fluid mb-4">
+              <img src="assets/img/services3.png" alt="" class="img-fluid mb-4">
               <h6>At Aruna Hospital, where we prioritize the health and well-being of every individual. Our commitment extends to providing specialized and comprehensive treatments designed specifically for men.</h6>
               <!-- ... Your content ... -->
               <div class="nomore text-center mt-3"> 
@@ -699,7 +699,7 @@
             <div id="additionalContent4" style="display: none;">
               <!-- Additional content for the fourth accordion -->
               <h1 class="mb-3">Erectile Dysfunction Procedure</h1>
-              <img src="assets/img/vaginalimg4.png" alt="" class="img-fluid mb-4">
+              <img src="assets/img/services4.png" alt="" class="img-fluid mb-4">z
               <h6>At Aruna Hospital, we pride ourselves on offering cutting-edge medical care supported by advanced equipment. Our state-of-the-art facilities include diagnostic tools like MRI and CT scanners, ensuring precise and comprehensive imaging. From high-tech surgical instruments to modern patient monitoring systems, we are committed to providing the best in healthcare. Our investment in advanced equipment reflects our dedication to delivering accurate diagnoses, effective treatments, and compassionate care.</h6>
               <!-- ... Your content ... -->
               <div class="nomore text-center mt-3"> 
