--- a/male.html
+++ b/male.html
@@ -27,11 +27,11 @@
 
 
 </head>
-<body>
+<body id="main_img">
 
 <!-- Header Large Screen only  -->
 
-<nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow fixed-top">
+<nav class="navbar navbar-expand-lg navbar-light d-none d-lg-flex  shadow "  >
   <a class="navbar-brand ms-2" href="index.html">
     <img src="assets/img/logo.png" alt="">
   </a>
@@ -52,7 +52,7 @@
           <h5 class="ml-2">+79979901881</h5>
         </div>
       </a>
-      <a class="nav-item nav-link  mt-2" href="appoinment.html" id="navlink2" >
+      <a class="nav-item nav-link  mt-2" href="appointment.html" id="navlink2" >
         <div class="dropdown show">
           <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background-color: #036DA4;">
              SERVICES
@@ -65,7 +65,7 @@
           </div>
         </div>
       </a>
-      <a class="nav-item nav-link" href="appoinment.html" id="navlink2" >
+      <a class="nav-item nav-link" href="appointment.html" id="navlink2" >
         <button type="button" class="btn btn-primary    mt-3"  id="button">APPOINTMENT</button>
       </a>
     </div>
@@ -77,7 +77,7 @@
   <!-- Header Small and medium Screen only  -->
 
 
-<nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none shadow fixed-top">
+<nav class="navbar navbar-expand-lg navbar-light d-sm-block d-md-block d-lg-none shadow">
   <a class="navbar-brand" href="index.html">
     <img src="assets/img/logo.png" alt="">
   </a>
@@ -110,7 +110,7 @@
           </div>
         </div>
       </a>         
-      <a class="nav-item nav-link" href="appoinment.html" id="navlink2">
+      <a class="nav-item nav-link" href="appointment.html" id="navlink2">
         <button type="button" class="btn btn-primary" style="background-color: #036DA4;" >APPOINTMENT</button>
       </a>
     </div>
@@ -122,7 +122,7 @@
 
 <!--  MAIN SECTION -->
 
-<section id="main_img">
+<section  >
   <div class="container-fluid mb-5 mt-5">
       <div class="row"> 
           <h3 class="pb-3">MALE  SERVICES</h3>
