changes in phone number

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <a class="nav-item nav-link ms-5 mt-3 pt-3  ps-5  " href="#" id="navlink2">
           <div class="d-flex align-items-center">
             <img src="assets/img/phone.svg" alt="">
-            <h5 class="ml-2">+79979901881</h5>
+            <h5 class="ml-2">+7997990181</h5>
           </div>
         </a>
         <a class="nav-item nav-link ms-2 " href="appointment.html" id="navlink2">
@@ -75,7 +75,7 @@
       <a class="nav-item nav-link" href="#" id="navlink1">
         <div class="d-flex align-items-center">
           <img src="assets/img/phone.svg" alt="">
-          <h5 class="ml-2">+79979901881</h5>
+          <h5 class="ml-2">+7997990181</h5>
         </div>
       </a>
       <a class="nav-item nav-link mt-2" href="index.html" id="navlink2">
@@ -126,7 +126,7 @@
       <a class="nav-item nav-link ms-5 mt-3 pt-3  ps-5  " href="#" id="navlink2">
         <div class="d-flex align-items-center">
           <img src="assets/img/phone.svg" alt="">
-          <h5 class="ml-2">+79979901881</h5>
+          <h5 class="ml-2">+7997990181</h5>
         </div>
       </a>
       <!-- <span class="slant-shadow">.</span> -->
@@ -145,19 +145,19 @@
 
 <nav class="navbar  navbar-light d-block d-md-block d-lg-none shadow"  >
   <div class="row">
-    <div class="col-4"> 
-      <a class="navbar-brand me-5" href="index.html">
+    <div class="col-4 mt-2"> 
+      <a class="navbar-brand" href="index.html">
         <img src="assets/img/logo.png" alt="" height="60"  width="130">
       </a>
     </div>
-    <div class="col-4"> 
+    <div class="col-4 mt-2"> 
       <a class="nav-item nav-link" href="male.html" id="navlink2">
         <img src="assets/img/menscilinicfinallogo.png" alt="" height="60"  width="150">
       </a>
     </div>
     <div class="col-4"> 
       <span></span>
-      <button class="navbar-toggler ms-5" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+      <button class="navbar-toggler ms-5 mt-3" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -171,7 +171,7 @@
       <!-- <a class="nav-item nav-link" href="#" id="navlink1">
         <div class="d-flex align-items-center">
           <img src="assets/img/phone.svg" alt="">
-          <h5 class="ml-2 text-dark">+79979901881</h5>
+          <h5 class="ml-2 text-dark">+7997990181</h5>
         </div>
       </a> -->
       <div class="row"> 
@@ -954,7 +954,7 @@
    <!-- ENDING  FOOTER -->
 
   <!-- WhatsApp link -->
-  <a href="https://api.whatsapp.com/send?phone=9179979901881" class="whatsapp-link shadow" target="_blank">
+  <a href="https://api.whatsapp.com/send?phone=917997990181" class="whatsapp-link shadow" target="_blank">
     <i class="bi bi-whatsapp"></i>
   </a>
   
