changes in spelling

--- a/ExectileDysfunctionProcedure.html
+++ b/ExectileDysfunctionProcedure.html
@@ -60,10 +60,10 @@
              SERVICES
           </a>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <a class="dropdown-item" href="femalenonsurgical.html">FemalenonSurgical</a>
+            <a class="dropdown-item" href="femalenonsurgical.html">Female non Surgical</a>
             <a class="dropdown-item" href="femalesurgical.html">Female Surgical</a>
             <a class="dropdown-item" href="male.html">Male</a>
-            <a class="dropdown-item" href="ExectileDysfunctionProcedure.html">ExectileDysfunctionProcedure</a>
+            <a class="dropdown-item" href="ExectileDysfunctionProcedure.html">Exectile Dysfunction Procedure</a>
           </div>
         </div>
       </a>
@@ -105,10 +105,10 @@
                       SERVICES
                     </a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                      <a class="dropdown-item" href="femalenonsurgical.html">FemalenonSurgical</a>
+                      <a class="dropdown-item" href="femalenonsurgical.html">Female non Surgical</a>
                       <a class="dropdown-item" href="femalesurgical.html">Female Surgical</a>
                       <a class="dropdown-item" href="male.html">Male</a>
-                      <a class="dropdown-item" href="ExectileDysfunctionProcedure.html">ExectileDysfunctionProcedure</a>
+                      <a class="dropdown-item" href="ExectileDysfunctionProcedure.html">Exectile Dysfunction Procedure</a>
                     </div>
                   </div>
                 </a>
