--- a/femalenonsurgical.html
+++ b/femalenonsurgical.html
@@ -60,10 +60,10 @@
              SERVICES
           </a>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <a class="dropdown-item" href="femalenonsurgical.html">FemalenonSurgical</a>
+            <a class="dropdown-item" href="femalenonsurgical.html">Female non Surgical</a>
             <a class="dropdown-item" href="femalesurgical.html">Female Surgical</a>
             <a class="dropdown-item" href="male.html">Male</a>
-            <a class="dropdown-item" href="ExectileDysfunctionProcedure.html">ExectileDysfunctionProcedure</a>
+            <a class="dropdown-item" href="ExectileDysfunctionProcedure.html">Exectile Dysfunction Procedure</a>
           </div>
         </div>
       </a>
@@ -105,10 +105,10 @@
                     SERVICES
                   </a>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                    <a class="dropdown-item" href="femalenonsurgical.html">FemalenonSurgical</a>
+                    <a class="dropdown-item" href="femalenonsurgical.html">Female non Surgical</a>
                     <a class="dropdown-item" href="femalesurgical.html">Female Surgical</a>
                     <a class="dropdown-item" href="male.html">Male</a>
-                    <a class="dropdown-item" href="ExectileDysfunctionProcedure.html">ExectileDysfunctionProcedure</a>
+                    <a class="dropdown-item" href="ExectileDysfunctionProcedure.html">Exectile Dysfunction Procedure</a>
                   </div>
                 </div>
               </a>
@@ -448,7 +448,7 @@
 <section id="strech-mark-management">
   <div class="container mb-5">
       <div class="row"> 
-          <h3 class="pb-3"> STRECH MARK MANAGEMENT </h3>
+          <h3 class="pb-3"> STRETCH MARK MANAGEMENT </h3>
            
           <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
            <span>
