--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             </a>
         </div>
         <div class="col-lg-3 mt-3">
-            <a href="https://www.facebook.com/profile.php?id=61552215897331" target="_blank">
+            <a href="https://www.instagram.com/aruna_couples_clinic_kakinada/?fbclid=IwAR0jpbJJbL8qf2YJtEdLQ_rXBQ0L1kM9esyIAH5HhG_N-GDL1rxlGPgKryY" target="_blank">
                 <img src="assets/img/icons8-instagram-48.png" alt="">
             </a>
         </div>
@@ -264,7 +264,7 @@
             <div class="container">
               <div class="row">
                 <div class="col-lg-6 col-sm-12 col-md-12 pt-5">
-                  <h1>Fulfiling Love,Rekindling </h1>
+                  <h1>Fulfilling Love,Rekindling </h1>
                   <h1>Connection :"Welcome to </h1>
                   <h1> Our Couples Clinic"</h1>
                   <br>
@@ -347,8 +347,8 @@
         </div>
         <div class="col-lg-6 col-sm-12 col-md-12 p-5 mt-5">
           <h1 class="mb-3 pt-3">Are you looking for the <br>
-            Best Cometic Gynecology<br> Hospital in Kakinada ?</h1>
-          <h6 class="pe-5">Your search ends with Aurna Hospital Couples Clinic. Our goal is to increase your
+            Best Cosmetic Gynecology<br> Hospital in Kakinada ?</h1>
+          <h6 class="pe-5">Your search ends with Aruna Hospital Couples Clinic. Our goal is to increase your
             self-confidence and well-being through our specialized cosmetic gynecology services.</h6>
           <br>
           <br>
@@ -379,7 +379,7 @@
                   <h5 class="card-title">Aesthetic Gynecology</h5>
                   <p class="card-text pb-2">Our clinic specializes in aesthetic gynecology treatments to improve
                     intimate
-                    Well-being. Whether you Want Vaginal rejuvenation, labiaplasty, or anthoer cosmetic procedure, our
+                    Well-being. Whether you Want Vaginal rejuvenation, labiaplasty, or another cosmetic procedure, our
                     experts are here to help.</p>
                   <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                 </div>
@@ -517,7 +517,7 @@
       <div class="row">
         <div class="col-lg-6 col-sm-12 col-md-12">
           <h1 class="mb-3">Why choose <br>
-            Aurna Couples Clinic?</h1>
+            Aruna Couples Clinic?</h1>
           <h6 class="pe-5">As a leading cosmetic gynecology hospital in kakinada, We offer a range of state-of-the-art
             treatments to make you look and feel your best. Our team of experienced gynecologists and plastic surgeons
             is committed to providing you with personalized care and exceptional results. </h6>
@@ -573,7 +573,7 @@
                         <li> <a href="femalenonsurgical.html#bikini-laser-hair-removal"> Bikini Laser Hair Removal </a></li>
                         <li><a href="femalenonsurgical.html#vulva-hair-reduction">Vulva Hair Reduction </a></li>
                         <!-- <li><a href="femalenonsurgical.html#senatine-peels"> Senatine Peels </a> </li> -->
-                        <li><a href="femalenonsurgical.html#strech-mark-management">Strech Mark Management </a></li>
+                        <li><a href="femalenonsurgical.html#strech-mark-management">Stretch Mark Management </a></li>
                     </div>
                     <div class="col-lg-6"> 
                         <li><a href="femalenonsurgical.html#breast-sagging">Breast Sagging </a></li>
