--- a/femalesurgical.html
+++ b/femalesurgical.html
@@ -58,10 +58,10 @@
              SERVICES
           </a>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <a class="dropdown-item" href="femalenonsurgical.html">FemalenonSurgical</a>
+            <a class="dropdown-item" href="femalenonsurgical.html">Female non Surgical</a>
             <a class="dropdown-item" href="femalesurgical.html">Female Surgical</a>
             <a class="dropdown-item" href="male.html">Male</a>
-            <a class="dropdown-item" href="ExectileDysfunctionProcedure.html">ExectileDysfunctionProcedure</a>
+            <a class="dropdown-item" href="ExectileDysfunctionProcedure.html">Exectile Dysfunction Procedure</a>
           </div>
         </div>
       </a>
@@ -103,10 +103,10 @@
                       SERVICES
                     </a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                      <a class="dropdown-item" href="femalenonsurgical.html">FemalenonSurgical</a>
+                      <a class="dropdown-item" href="femalenonsurgical.html">Female non Surgical</a>
                       <a class="dropdown-item" href="femalesurgical.html">Female Surgical</a>
                       <a class="dropdown-item" href="male.html">Male</a>
-                      <a class="dropdown-item" href="ExectileDysfunctionProcedure.html">ExectileDysfunctionProcedure</a>
+                      <a class="dropdown-item" href="ExectileDysfunctionProcedure.html">Exectile Dysfunction Procedure</a>
                     </div>
                   </div>
                 </a>
@@ -271,7 +271,7 @@
 <section id="monsplaty">
     <div class="container mb-5">
         <div class="row"> 
-            <h3 class="pb-3"> MONSPLATY  </h3>
+            <h3 class="pb-3"> MONSPLASTY </h3>
             <div class="col-lg-6 col-md-12 col-sm-12 pb-2">
                 <span>
                     Monsplasty: Improving Aesthetics and Comfort 
