--- a/male.html
+++ b/male.html
@@ -58,10 +58,10 @@
              SERVICES
           </a>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <a class="dropdown-item" href="femalenonsurgical.html">FemalenonSurgical</a>
+            <a class="dropdown-item" href="femalenonsurgical.html">Female non Surgical</a>
             <a class="dropdown-item" href="femalesurgical.html">Female Surgical</a>
             <a class="dropdown-item" href="male.html">Male</a>
-            <a class="dropdown-item" href="ExectileDysfunctionProcedure.html">ExectileDysfunctionProcedure</a>
+            <a class="dropdown-item" href="ExectileDysfunctionProcedure.html">Exectile Dysfunction Procedure</a>
           </div>
         </div>
       </a>
@@ -116,10 +116,10 @@
                   SERVICES
                 </a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                  <a class="dropdown-item" href="femalenonsurgical.html">FemalenonSurgical</a>
+                  <a class="dropdown-item" href="femalenonsurgical.html">Female non Surgical</a>
                   <a class="dropdown-item" href="femalesurgical.html">Female Surgical</a>
                   <a class="dropdown-item" href="male.html">Male</a>
-                  <a class="dropdown-item" href="ExectileDysfunctionProcedure.html">ExectileDysfunctionProcedure</a>
+                  <a class="dropdown-item" href="ExectileDysfunctionProcedure.html">Exectile Dysfunction Procedure</a>
                 </div>
               </div>
             </a>
